# personal_site_doctor

./: html_snippets.txt  main.py  pyproject.toml
templates/: about.html  header_layout.html  home.html  layout.html  reviews.html
